--- a/trainmydog/templates/course_detail.html
+++ b/trainmydog/templates/course_detail.html
@@ -144,7 +144,7 @@
       {% if not request.user.is_authenticated or request.user.profile.role != 'trainer' %}
         <footer class="pt-10 pb-8 border-t border-slate-200">
           <div class="flex justify-end mt-4">
-            <a href="#"
+            <a href="{% url 'trainmydog:booking_create' course.pk %}"
                class="rounded-xl bg-blue-600 px-6 py-3 text-white text-base font-medium hover:bg-blue-500 shadow">
               จองคอร์ส
             </a>
